[gd_scene load_steps=51 format=3 uid="uid://bm6r33rcfa1j6"]

[ext_resource type="Script" path="res://player_load/player_node/player_movement.gd" id="1_eisff"]
[ext_resource type="Script" path="res://player_load/player_node/player.gd" id="1_tearn"]
[ext_resource type="PackedScene" uid="uid://de7vva81jj68i" path="res://player_load/player_node/player_health.tscn" id="2_iokp0"]
[ext_resource type="Script" path="res://misc/notes.gd" id="2_uvbfg"]
[ext_resource type="Script" path="res://player_load/player_node/sword.gd" id="4_rbmau"]
[ext_resource type="Script" path="res://sfx_player/autoload/sf_link.gd" id="6_dcine"]
[ext_resource type="Script" path="res://player_load/player_node/sword_anim.gd" id="7_lhvyy"]
[ext_resource type="PackedScene" uid="uid://blfgs8vhomjk8" path="res://player_load/items/boomerang/boomerang_launch.tscn" id="7_vj8eh"]
[ext_resource type="Script" path="res://player_load/items/items.gd" id="8_ks4q4"]
[ext_resource type="PackedScene" uid="uid://ylblj4sykkqg" path="res://player_load/items/fishing rod/fishing_rod.tscn" id="9_wus56"]
[ext_resource type="Script" path="res://player_load/player_node/player_anim.gd" id="10_1w8a4"]
[ext_resource type="Texture2D" uid="uid://bmjtmf4h8ix3b" path="res://player_load/player_node/assets/lief_anim.aseprite" id="11_os4df"]
[ext_resource type="PackedScene" uid="uid://c0k4nawcq1y6y" path="res://player_load/items/shape_shifter/shape_shifter.tscn" id="12_c2wva"]
[ext_resource type="PackedScene" uid="uid://75l6vl3x6b6w" path="res://player_load/items/bombs/bomb_bag/bomb_bag.tscn" id="12_x5cs1"]
[ext_resource type="PackedScene" uid="uid://h4jc680hewwt" path="res://player_load/items/player_lift/player_lift.tscn" id="15_xckcm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cdxc5"]
size = Vector2(6, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h231d"]
size = Vector2(4, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0yp4v"]
size = Vector2(4, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_12nd1"]
size = Vector2(2, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afak3"]
size = Vector2(2, 3)

[sub_resource type="Resource" id="Resource_pk2hp"]
script = ExtResource("6_dcine")
sf_name = "sword_swing_one"
sf_vol = -1.0
sf_pitch = 1.0

[sub_resource type="Resource" id="Resource_2lenv"]
script = ExtResource("6_dcine")
sf_name = "sword_swing_two"
sf_vol = -1.0
sf_pitch = 1.0

[sub_resource type="Resource" id="Resource_4fdpj"]
script = ExtResource("6_dcine")
sf_name = "sword_swing_three"
sf_vol = -1.0
sf_pitch = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_okkvo"]
atlas = ExtResource("11_os4df")
region = Rect2(64, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5gxbn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"notswing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okkvo")
}],
"loop": false,
"name": &"swing",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yq415"]
size = Vector2(15, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_h87re"]
atlas = ExtResource("11_os4df")
region = Rect2(64, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_s8ihq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"notswing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h87re")
}],
"loop": false,
"name": &"swing",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8amp"]
size = Vector2(4, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsk76"]
atlas = ExtResource("11_os4df")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sxcw6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"notswing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsk76")
}],
"loop": false,
"name": &"swing",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_da7sj"]
size = Vector2(4, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4f0s"]
atlas = ExtResource("11_os4df")
region = Rect2(64, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_a50ti"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"notswing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4f0s")
}],
"loop": false,
"name": &"swing",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_be1wq"]
size = Vector2(12, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p2b4"]
atlas = ExtResource("11_os4df")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxroy"]
atlas = ExtResource("11_os4df")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3gmk"]
atlas = ExtResource("11_os4df")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipify"]
atlas = ExtResource("11_os4df")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1wdt"]
atlas = ExtResource("11_os4df")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqgv3"]
atlas = ExtResource("11_os4df")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0rr3"]
atlas = ExtResource("11_os4df")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qydmx"]
atlas = ExtResource("11_os4df")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdvey"]
atlas = ExtResource("11_os4df")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3h3p"]
atlas = ExtResource("11_os4df")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ap20l"]
atlas = ExtResource("11_os4df")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ml3rf"]
atlas = ExtResource("11_os4df")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_x8b2j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p2b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxroy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3gmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipify")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1wdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqgv3")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0rr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qydmx")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdvey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3h3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ap20l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml3rf")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="Resource" id="Resource_1mqla"]
script = ExtResource("6_dcine")
sf_name = "none"
sf_vol = -1.0
sf_pitch = 1.0

[sub_resource type="Resource" id="Resource_mv7gb"]
script = ExtResource("6_dcine")
sf_name = "none"
sf_vol = -1.0
sf_pitch = 1.0

[node name="player" type="Node2D" node_paths=PackedStringArray("items_node", "movement_script", "sword_script", "anim_script", "health_script")]
z_index = 15
script = ExtResource("1_tearn")
items_node = NodePath("items")
movement_script = NodePath("movement")
sword_script = NodePath("sword")
anim_script = NodePath("player_anim")
health_script = NodePath("player_health")

[node name="movement" type="Node2D" parent="." node_paths=PackedStringArray("pos", "hit_area", "up_col", "down_col", "left_col", "right_col", "anim_controller", "hurt_timer")]
visible = false
position = Vector2(0, -4)
script = ExtResource("1_eisff")
pos = NodePath("..")
vel = Array[int]([1, 1])
hit_area = NodePath("../hit_area")
up_col = NodePath("../wall_collision/up")
down_col = NodePath("../wall_collision/down")
left_col = NodePath("../wall_collision/left")
right_col = NodePath("../wall_collision/right")
anim_controller = NodePath("../player_anim")
hurt_timer = NodePath("hurt_timer")

[node name="hurt_timer" type="Timer" parent="movement"]
wait_time = 0.1
one_shot = true

[node name="hit_area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 132

[node name="hit_box" type="CollisionShape2D" parent="hit_area"]
shape = SubResource("RectangleShape2D_cdxc5")

[node name="notes" type="Node2D" parent="hit_area"]
script = ExtResource("2_uvbfg")

[node name="wall_collision" type="Node2D" parent="."]
position = Vector2(0, -6)

[node name="up" type="Area2D" parent="wall_collision"]
position = Vector2(0, 2)
collision_layer = 0
collision_mask = 2

[node name="up_box" type="CollisionShape2D" parent="wall_collision/up"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_h231d")

[node name="down" type="Area2D" parent="wall_collision"]
collision_layer = 0
collision_mask = 2

[node name="down_box" type="CollisionShape2D" parent="wall_collision/down"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_0yp4v")

[node name="left" type="Area2D" parent="wall_collision"]
collision_layer = 0
collision_mask = 2

[node name="left_box" type="CollisionShape2D" parent="wall_collision/left"]
position = Vector2(-3, 5.5)
shape = SubResource("RectangleShape2D_12nd1")

[node name="right" type="Area2D" parent="wall_collision"]
collision_layer = 0
collision_mask = 2

[node name="right_box" type="CollisionShape2D" parent="wall_collision/right"]
position = Vector2(3, 5.5)
shape = SubResource("RectangleShape2D_afak3")

[node name="player_health" parent="." node_paths=PackedStringArray("hitbox", "anim_node", "move_node") instance=ExtResource("2_iokp0")]
visible = false
position = Vector2(62.75, 66.25)
hitbox = NodePath("../hit_area")
inv_vis_flash_interval = 2
inv_invis_flash_interval = 4
anim_node = NodePath("../player_anim")
move_node = NodePath("../movement")

[node name="sword" type="Node2D" parent="." node_paths=PackedStringArray("sword_anim_controller", "sword_areas")]
position = Vector2(0, -2)
script = ExtResource("4_rbmau")
sword_anim_controller = NodePath("sword_anim")
sword_areas = [NodePath("sword_up/us_area"), NodePath("sword_down/ds_area"), NodePath("sword_left/ls_area"), NodePath("sword_right/rs_area")]
swing_sfx = Array[ExtResource("6_dcine")]([SubResource("Resource_pk2hp"), SubResource("Resource_2lenv"), SubResource("Resource_4fdpj")])

[node name="sword_left" type="AnimatedSprite2D" parent="sword"]
position = Vector2(-12, 0)
sprite_frames = SubResource("SpriteFrames_5gxbn")
animation = &"notswing"
autoplay = "notswing"

[node name="ls_area" type="Area2D" parent="sword/sword_left"]
visible = false
collision_layer = 2048
collision_mask = 4

[node name="ls_shape" type="CollisionShape2D" parent="sword/sword_left/ls_area"]
position = Vector2(2.5, 2)
shape = SubResource("RectangleShape2D_yq415")
disabled = true

[node name="sword_up" type="AnimatedSprite2D" parent="sword"]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_s8ihq")
animation = &"notswing"
autoplay = "notswing"

[node name="us_area" type="Area2D" parent="sword/sword_up"]
visible = false
collision_layer = 2048
collision_mask = 4

[node name="us_shape" type="CollisionShape2D" parent="sword/sword_up/us_area"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_d8amp")
disabled = true

[node name="sword_down" type="AnimatedSprite2D" parent="sword"]
position = Vector2(0, 12)
sprite_frames = SubResource("SpriteFrames_sxcw6")
animation = &"notswing"
autoplay = "notswing"

[node name="ds_area" type="Area2D" parent="sword/sword_down"]
visible = false
collision_layer = 2048
collision_mask = 4

[node name="ds_shape" type="CollisionShape2D" parent="sword/sword_down/ds_area"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_da7sj")
disabled = true

[node name="sword_right" type="AnimatedSprite2D" parent="sword"]
position = Vector2(12, 0)
sprite_frames = SubResource("SpriteFrames_a50ti")
animation = &"notswing"
autoplay = "notswing"

[node name="rs_area" type="Area2D" parent="sword/sword_right"]
visible = false
collision_layer = 2048
collision_mask = 4

[node name="rs_shape" type="CollisionShape2D" parent="sword/sword_right/rs_area"]
position = Vector2(-1, 2)
shape = SubResource("RectangleShape2D_be1wq")
disabled = true

[node name="sword_anim" type="Node2D" parent="sword" node_paths=PackedStringArray("up_sword", "down_sword", "left_sword", "right_sword", "swing_timer")]
script = ExtResource("7_lhvyy")
up_sword = NodePath("../sword_up")
down_sword = NodePath("../sword_down")
left_sword = NodePath("../sword_left")
right_sword = NodePath("../sword_right")
swing_timer = NodePath("swing_timer")

[node name="swing_timer" type="Timer" parent="sword/sword_anim"]
wait_time = 0.2
one_shot = true

[node name="items" type="Node2D" parent="." node_paths=PackedStringArray("boom_launch", "rod_node", "bomb_bag_node")]
position = Vector2(0, -4)
script = ExtResource("8_ks4q4")
boom_launch = NodePath("boomerang_launch")
rod_node = NodePath("fishing_rod")
bomb_bag_node = NodePath("bomb_bag")

[node name="boomerang_launch" parent="items" instance=ExtResource("7_vj8eh")]

[node name="fishing_rod" parent="items" instance=ExtResource("9_wus56")]

[node name="bomb_bag" parent="items" instance=ExtResource("12_x5cs1")]
position = Vector2(0, 4)

[node name="player_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_x8b2j")
animation = &"walk_down"
autoplay = "walk_down"
script = ExtResource("10_1w8a4")

[node name="shape_shifter" parent="." node_paths=PackedStringArray("player_move", "player_items") instance=ExtResource("12_c2wva")]
visible = false
position = Vector2(0, -4)
player_move = NodePath("../movement")
player_items = NodePath("../items")

[node name="player_lift" parent="." instance=ExtResource("15_xckcm")]
grab_sf = SubResource("Resource_1mqla")
throw_sf = SubResource("Resource_mv7gb")

[node name="hold_point" parent="player_lift" index="0"]
position = Vector2(0, -14)
scale = Vector2(-0.167331, 2.15214)

[node name="grab_area" parent="player_lift" index="1"]
position = Vector2(5, -3)

[node name="grab_shape" parent="player_lift/grab_area" index="0"]
position = Vector2(2, 4.5)

[node name="up" parent="player_lift/grab_points" index="0"]
position = Vector2(0, -4)

[node name="down" parent="player_lift/grab_points" index="1"]
position = Vector2(0, 6)

[node name="left" parent="player_lift/grab_points" index="2"]
position = Vector2(-8, 1)

[node name="right" parent="player_lift/grab_points" index="3"]
position = Vector2(6, 1)

[node name="drop_point" parent="player_lift" index="4"]
position = Vector2(10, 1)

[node name="up" parent="player_lift/drop_points" index="0"]
position = Vector2(0, -10)

[node name="down" parent="player_lift/drop_points" index="1"]
position = Vector2(0, 8)

[node name="left" parent="player_lift/drop_points" index="2"]
position = Vector2(-8, 0)

[node name="right" parent="player_lift/drop_points" index="3"]
position = Vector2(8, 0)

[connection signal="timeout" from="movement/hurt_timer" to="movement" method="_on_hurt_timer_timeout"]
[connection signal="area_entered" from="hit_area" to="player_health" method="_on_hit_area_area_entered"]
[connection signal="ended_swing" from="sword" to="movement" method="_on_sword_ended_swing"]
[connection signal="started_swing" from="sword" to="movement" method="_on_sword_started_swing"]
[connection signal="timeout" from="sword/sword_anim/swing_timer" to="sword/sword_anim" method="_on_swing_timer_timeout"]

[editable path="player_lift"]
